[project]
name = "invitation-agent"
version = "0.1.0"
description = "초대장 URL을 분석해 일정을 추출하고 카카오 캘린더에 등록하는 MCP 서버"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.4.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "playwright>=1.44",
    "selectolax>=0.3.21",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
invitation_agent = "invitation_agent.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/invitation_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
